--- a/CodingEvents/CodingEvents.csproj
+++ b/CodingEvents/CodingEvents.csproj
@@ -7,9 +7,11 @@
   <ItemGroup>
     <None Remove="Views\Events\" />
     <None Remove="Data\" />
+    <None Remove="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Events\" />
     <Folder Include="Data\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 </Project>
